--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>常用链接清单｜Long live freedom!</title>
+  <title>小东要买兰德酷路泽｜Long live freedom!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="J.png" type="image/png">
@@ -658,7 +658,7 @@
 <div id="lock-screen">
   <div class="lock-box">
     <div class="lock-title">输入通关暗号</div>
-    <div class="lock-sub">常用链接清单 · 个人导航面板。</div>
+    <div class="lock-sub">小东要买兰德酷路泽 · 个人导航面板。</div>
     <input id="password-input" class="lock-input" placeholder="请输入密码" />
     <button class="lock-btn" onclick="checkPassword()">进入</button>
     <div id="lock-error"></div>
@@ -672,7 +672,7 @@
       <div class="title-block" id="theme-toggle">
         <div class="logo">J</div>
         <div class="title-text">
-          <h1>常用链接清单</h1>
+          <h1>小东要买兰德酷路泽</h1>
           <span id="subtitle">Long live freedom!</span>
         </div>
       </div>
@@ -865,6 +865,74 @@
           </button>
         </div>
         <div class="card-url">https://chatgpt.com</div>
+      </div>
+    </div>
+
+    <!-- 黑科技实验室 -->
+    <div class="section-title">黑科技实验室</div>
+    <div class="grid">
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">📡</div>
+            <div class="card-text">
+              <div class="card-title">ping.pe</div>
+              <div class="card-desc">全球多点 Ping / 路由测试。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://ping.pe', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://ping.pe</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🔎</div>
+            <div class="card-text">
+              <div class="card-title">trace.moe</div>
+              <div class="card-desc">以图搜番 / 查视频原始出处。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://trace.moe', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://trace.moe</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">📊</div>
+            <div class="card-text">
+              <div class="card-title">Gamma · AI PPT</div>
+              <div class="card-desc">一句话生成整套 PPT / 文档。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://gamma.app', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://gamma.app</div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <div class="card-main">
+            <div class="card-icon">🎙️</div>
+            <div class="card-text">
+              <div class="card-title">ElevenLabs</div>
+              <div class="card-desc">超逼真多语言 AI 语音合成。</div>
+            </div>
+          </div>
+          <button class="card-btn" onclick="window.open('https://elevenlabs.io', '_blank')">
+            打开 <span>↗</span>
+          </button>
+        </div>
+        <div class="card-url">https://elevenlabs.io</div>
       </div>
     </div>
 
@@ -1273,22 +1341,6 @@
           </button>
         </div>
         <div class="card-url">https://runwayml.com</div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <div class="card-main">
-            <div class="card-icon">🎙️</div>
-            <div class="card-text">
-              <div class="card-title">ElevenLabs</div>
-              <div class="card-desc">神经网络语音合成服务。</div>
-            </div>
-          </div>
-          <button class="card-btn" onclick="window.open('https://elevenlabs.io', '_blank')">
-            打开 <span>↗</span>
-          </button>
-        </div>
-        <div class="card-url">https://elevenlabs.io</div>
       </div>
 
       <div class="card">
@@ -1864,7 +1916,8 @@
       "世界很大，链接在手。",
       "有链接的地方，就有出口。",
       "人生苦短，先打开你想看的那个。",
-      "保持清醒，保持好奇。"
+      "保持清醒，保持好奇。",
+      "目标：先开上兰德酷路泽。"
     ];
     const idx = Math.floor(Math.random() * mottos.length);
     el.textContent = mottos[idx];
