--- a/index.html
+++ b/index.html
@@ -329,6 +329,65 @@
           </div>
         </div>
 
+        <div class="section-block">
+          <div class="section-cover">
+            <div class="cover-icon">🪟</div>
+            <div class="cover-title">虚拟视界</div>
+            <div class="cover-desc">世界各地的窗外与实况</div>
+          </div>
+          <div class="section-links">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🪟</div><div class="card-text"><div class="card-title">WindowSwap</div><div class="card-desc">别人的窗外</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('http://www.window-swap.com/')">↗</button></div>
+              </div>
+              <div class="card-url">window-swap.com</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🗾</div><div class="card-text"><div class="card-title">Window Japan</div><div class="card-desc">日本窗景</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('http://www.window-swap-japan.com/')">↗</button></div>
+              </div>
+              <div class="card-url">window-swap-japan.com</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🚪</div><div class="card-text"><div class="card-title">Secret Door</div><div class="card-desc">任意门</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('https://www.thesecretdoor.com/')">↗</button></div>
+              </div>
+              <div class="card-url">thesecretdoor.com</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">📹</div><div class="card-text"><div class="card-title">Webcams.travel</div><div class="card-desc">全球摄像头</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('https://www.webcams.travel/')">↗</button></div>
+              </div>
+              <div class="card-url">webcams.travel</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🐼</div><div class="card-text"><div class="card-title">Explore.org</div><div class="card-desc">自然直播</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('https://explore.org/')">↗</button></div>
+              </div>
+              <div class="card-url">explore.org</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🌍</div><div class="card-text"><div class="card-title">EarthCam</div><div class="card-desc">城市实况</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('https://www.earthcam.com/')">↗</button></div>
+              </div>
+              <div class="card-url">earthcam.com</div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main"><div class="card-icon">🖼️</div><div class="card-text"><div class="card-title">Virtual Window</div><div class="card-desc">虚拟视窗</div></div></div>
+                <div class="card-actions"><button class="card-btn" onclick="openLink('http://www.virtualwindow.com/')">↗</button></div>
+              </div>
+              <div class="card-url">virtualwindow.com</div>
+            </div>
+          </div>
+        </div>
+
     <div class="section-block">
   <div class="section-cover">
     <div class="cover-icon">🌐</div>
