--- a/index.html
+++ b/index.html
@@ -526,6 +526,65 @@
   </div>
 </div>
 
+  <div class="section-block">
+          <div class="section-cover">
+            <div class="cover-icon">🔥</div>
+            <div class="cover-title">私人收藏</div>
+            <div class="cover-desc">特殊通道与工具</div>
+          </div>
+          <div class="section-links">
+            
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main">
+                  <div class="card-icon">🎲</div>
+                  <div class="card-text">
+                    <div class="card-title">随机大全</div>
+                    <div class="card-desc">各类生成工具</div>
+                  </div>
+                </div>
+                <div class="card-actions">
+                  <button class="card-btn" onclick="openLink('https://www.suijidaquan.com/')">↗</button>
+                </div>
+              </div>
+              <div class="card-url">suijidaquan.com</div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main">
+                  <div class="card-icon">🔵</div>
+                  <div class="card-text">
+                    <div class="card-title">OnlyFans</div>
+                    <div class="card-desc">订阅制平台</div>
+                  </div>
+                </div>
+                <div class="card-actions">
+                  <button class="card-btn" onclick="openLink('https://onlyfans.com/')">↗</button>
+                </div>
+              </div>
+              <div class="card-url">onlyfans.com</div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main">
+                  <div class="card-icon">🧭</div>
+                  <div class="card-text">
+                    <div class="card-title">ThePornDude</div>
+                    <div class="card-desc">资源索引导航</div>
+                  </div>
+                </div>
+                <div class="card-actions">
+                  <button class="card-btn" onclick="openLink('https://theporndude.com/')">↗</button>
+                </div>
+              </div>
+              <div class="card-url">theporndude.com</div>
+            </div>
+
+          </div>
+        </div>      
+        
         <div class="section-block">
           <div class="section-cover">
             <div class="cover-icon">🤖</div>
@@ -1367,5 +1426,6 @@
   </script>
 </body>
 </html>
+
 
 
