--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
           <div class="section-cover">
             <div class="cover-icon">🔥</div>
             <div class="cover-title">私人收藏</div>
-            <div class="cover-desc">特殊通道与工具</div>
+            <div class="cover-desc">特殊通道与索引</div>
           </div>
           <div class="section-links">
             
@@ -569,10 +569,10 @@
             <div class="card">
               <div class="card-header">
                 <div class="card-main">
-                  <div class="card-icon">🧭</div>
+                  <div class="card-icon">🤠</div>
                   <div class="card-text">
                     <div class="card-title">ThePornDude</div>
-                    <div class="card-desc">资源索引导航</div>
+                    <div class="card-desc">老牌资源索引</div>
                   </div>
                 </div>
                 <div class="card-actions">
@@ -582,8 +582,40 @@
               <div class="card-url">theporndude.com</div>
             </div>
 
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main">
+                  <div class="card-icon">📜</div>
+                  <div class="card-text">
+                    <div class="card-title">The Big List</div>
+                    <div class="card-desc">TBLOP 目录</div>
+                  </div>
+                </div>
+                <div class="card-actions">
+                  <button class="card-btn" onclick="openLink('https://www.tblop.com/')">↗</button>
+                </div>
+              </div>
+              <div class="card-url">tblop.com</div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <div class="card-main">
+                  <div class="card-icon">📡</div>
+                  <div class="card-text">
+                    <div class="card-title">Live / Other</div>
+                    <div class="card-desc">其他资源备用</div>
+                  </div>
+                </div>
+                <div class="card-actions">
+                  <button class="card-btn" onclick="openLink('Reddit.com')">↗</button>
+                </div>
+              </div>
+              <div class="card-url">private</div>
+            </div>
+
           </div>
-        </div>      
+        </div>
         
 <div class="section-block">
           <div class="section-cover">
@@ -1470,6 +1502,7 @@
   </script>
 </body>
 </html>
+
 
 
 
