--- a/index.html
+++ b/index.html
@@ -604,11 +604,11 @@
                   <div class="card-icon">📡</div>
                   <div class="card-text">
                     <div class="card-title">Live / Other</div>
-                    <div class="card-desc">其他资源备用</div>
+                    <div class="card-desc">全网主阵地</div>
                   </div>
                 </div>
                 <div class="card-actions">
-                  <button class="card-btn" onclick="openLink('Reddit.com')">↗</button>
+                  <button class="card-btn" onclick="openLink('https://www.reddit.com/')">↗</button>
                 </div>
               </div>
               <div class="card-url">private</div>
@@ -1502,6 +1502,7 @@
   </script>
 </body>
 </html>
+
 
 
 
