--- a/index.html
+++ b/index.html
@@ -277,12 +277,20 @@
 </head>
 <body>
 
-  <div id="splash">
-    <div class="splash-quote">
-      <p>向前看，长路漫漫亦灿烂。<br>去做你想做的事情，哪怕是站在夜色中看星星。</p>
-    </div>
-    <button class="enter-btn" onclick="closeSplash()">Enter Archive</button>
-  </div>
+<div class="splash-quote">
+  <p style="font-size: 24px; text-align: left; line-height: 1.8;">
+    人生的意义是什么？那我告诉你，人生没有意义。<br>
+    99%的人三代以后，时间会抹平你存在的一切痕迹。<br>
+    所以，人生的意义，就是你活着的这短短几十年体验。<br>
+    <br>
+    明天和意外，也不知道哪个先来。<br>
+    世事无常，我们所能做的就是欣赏每一次花开，观赏每一处风景。<br>
+    现在想想，那些难以接受的事情，也在自愿或者被迫中慢慢接受了。<br>
+    <br>
+    回头看，轻舟已过万重山；<br>
+    向前看，长路漫漫亦灿烂。
+  </p>
+</div>
 
   <div id="fab-memo" title="Open Cloud Memo">
     <i class="ri-cloud-line"></i>
@@ -1181,6 +1189,7 @@
   </script>
 </body>
 </html>
+
 
 
 
