--- a/index.html
+++ b/index.html
@@ -491,16 +491,22 @@
          </div>
       </div>
       
-    <div class="section-block" id="sec-images" data-icon="ri-palette-line">
+<div class="section-block" id="sec-images" data-icon="ri-palette-line">
         <div class="section-header">
           <div class="section-title">视觉光谱</div>
           <span class="section-count">Visual Spectrum</span>
         </div>
         <div class="grid">
-          <div class="card" onclick="openLink('https://ru.pinterest.com/')">
+          <div class="card" onclick="openLink('https://www.pinterest.com/')">
             <div class="card-head"><div class="icon-box">🖼️</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
             <div class="card-body"><div class="card-title">Pinterest</div><div class="card-desc">审美参考</div></div>
           </div>
+          
+          <div class="card" onclick="openLink('https://pindown.io/en1')">
+            <div class="card-head"><div class="icon-box">📌</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
+            <div class="card-body"><div class="card-title">Pindown</div><div class="card-desc">图片下载</div></div>
+          </div>
+
           <div class="card" onclick="openLink('https://yandex.com/')">
             <div class="card-head"><div class="icon-box">🔍</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
             <div class="card-body"><div class="card-title">Yandex</div><div class="card-desc">以图搜图</div></div>
@@ -1229,3 +1235,4 @@
   </script>
 </body>
 </html>
+
