--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 <body>
   
 <video autoplay muted loop playsinline id="bg-video" poster="J.png">
-    <source src="lingyunzhi.MP4" type="video/mp4">
+    <source src="lingyunzhi.mp4" type="video/mp4">
 </video>
 
 <div id="splash">
@@ -1279,4 +1279,5 @@
   </script>
 </body>
 </html>
+
 
