--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       世事无常，我们所能做的就是欣赏每一次花开，观赏每一处风景。<br>
       现在想想，那些难以接受的事情，也在自愿或者被迫中慢慢接受了。<br>
       <br>
-      回头看，<span onclick="closeSplash()" style="cursor: pointer; color: #007aff; border-bottom: 1px dashed #007aff;">轻舟</span>已过万重山；<br>
+      回头看，<span onclick="closeSplash()" style="cursor: pointer;">轻舟</span>已过万重山；
       向前看，长路漫漫亦灿烂。
     </p>
   </div>
@@ -1252,3 +1252,4 @@
   </script>
 </body>
 </html>
+
