--- a/index.html
+++ b/index.html
@@ -540,6 +540,10 @@
             <div class="card-head"><div class="icon-box">🌸</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
             <div class="card-body"><div class="card-title">花瓣网</div><div class="card-desc">灵感采集</div></div>
           </div>
+          <div class="card" onclick="openLink('https://pic.netbian.com/')">
+            <div class="card-head"><div class="icon-box">🌉</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
+            <div class="card-body"><div class="card-title">彼岸图网</div><div class="card-desc">4K壁纸</div></div>
+          </div>
         </div>
       </div>
       
@@ -1236,3 +1240,4 @@
   </script>
 </body>
 </html>
+
