--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
           </div>
         </div>
       </div>
-      
-      <div class="section-block" id="sec-network" data-icon="ri-server-line">
+
+<div class="section-block" id="sec-network" data-icon="ri-server-line">
         <div class="section-header"><div class="section-title">数字基石</div><span class="section-count">Foundation</span></div>
         <div class="grid">
            <div class="card" onclick="openLink('https://dashboard.thordata.com/')">
@@ -607,6 +607,10 @@
             <div class="card" onclick="openLink('https://app.ipfoxy.net/login?_bt=2')">
               <div class="card-head"><div class="icon-box">🌐</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
               <div class="card-body"><div class="card-title">IPFoxy</div><div class="card-desc">IP 代理</div></div>
+            </div>
+            <div class="card" onclick="openLink('https://www.coinepay.net')">
+              <div class="card-head"><div class="icon-box">💳</div><i class="ri-arrow-right-up-line link-arrow"></i></div>
+              <div class="card-body"><div class="card-title">Coinepay</div><div class="card-desc">支付网关</div></div>
             </div>
         </div>
       </div>
@@ -1240,5 +1244,6 @@
   </script>
 </body>
 </html>
+
 
 
